--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,20 @@ main {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
+.delivery-options {
+    display: flex;
+    justify-content: center;
+    gap: 45px;
+    margin: 20px 0;
+}
+
+.delivery-options img {
+    width: 45%;
+    border-radius: 8px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+
 .contact a {
     color: #4A90E2;
     font-weight: bold;
